infra/k8s/orders-depl.yaml
# this specifies the set of objects we want k8s to look at, deployment belongs to bucket v1
apiVersion: apps/v1
# the type of object we want to create
kind: Deployment
# config options for the object about to create
metadata:
  name: orders-depl
# The exact attributes we want to apply to the object we are about to create
spec:
  # number of pods we want to create
  replicas: 1
  selector:
    matchLabels:
      app: orders
  # specify the exact configuration of a pod that we want this deployment to create
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          # kubernetes will by default go to Docker hub and look for docker image if no version is specified
          image: hoffmanshf/ticketing-orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3002
      targetPort: 3002
